fixed firefox dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,8 @@
 @import './assets/styles/breakpoints';
 
 
+
+
 body {
 
     background-color: #a6afbe;
@@ -12,7 +14,7 @@ body {
     font-size: 14px;
     display: block;
     font-family: Montserrat, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-
+    color: $text-dark;
     ::-webkit-scrollbar {
         width: 4px;
     }
@@ -82,6 +84,8 @@ body {
         border-radius: 10px;
         margin-left: 8px;
         margin-right: 15px;
+        background-color: white;
+        color: $text-dark;
         cursor: pointer;
         font-family: Montserrat, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
         
@@ -89,6 +93,9 @@ body {
         &[type=text]{
             cursor: text;
         }
+    }
+    label {
+        color: $text-dark;
     }
 
     .logo{
@@ -122,7 +129,8 @@ body {
         min-width: 100px;
         cursor: pointer;
         font-family: Montserrat, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-        
+        background-color: white;
+        color: $text-dark;
         option {
             border: none;
         }
@@ -137,6 +145,7 @@ body {
         border-radius: 999px;
         border: solid 1px gray;
         transition: 0.2s;
+        
     }
 
     .error {
@@ -179,6 +188,9 @@ body {
         }
 
     }
+    .react-datepicker-popper {
+        z-index: 999999;
+    }
     
     .react-datepicker__triangle{
         fill: white;
@@ -187,6 +199,7 @@ body {
     
     h1 {
         font-size: 2.4em;
+        color: $text-heading;
     }
     
     #root {
@@ -419,3 +432,4 @@ body {
     }
     
 }
+
