--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -15,3 +15,5 @@ $gray3: #adb0b8;
 $gray4: #4b4d52;
 
 $btn-color-1: #3d3550;
+$text-heading: #213547;
+$text-dark: #12202c;
